# LMS-VAI-AGENT

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_basic.py
.github/: copilot-instructions.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: DEPLOYMENT-GMKTEC.md
src/: __init__.py  audio_manager.py  config.py  intent_parser.py  lm_client.py  main.py  mcp_client.py  stt.py  tts.py
