[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-vai-agent"
version = "0.1.0"
description = "LMS Voice AI Agent - Full-stack voice interface with LMStudio, MCP tools, and local STT/TTS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["voice-agent", "ai", "lmstudio", "mcp", "whisper", "tts", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "openai-whisper>=20231117",
    "TTS>=0.22.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

[project.scripts]
vai-agent = "src.main:cli"

[project.urls]
Homepage = "https://github.com/jhuntersatl/LMS-VAI-AGENT"
Repository = "https://github.com/jhuntersatl/LMS-VAI-AGENT.git"
Issues = "https://github.com/jhuntersatl/LMS-VAI-AGENT/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
